@@ -7,3 +7,4 @@
 - changed setting "only_peaceful_whinny" to "whinny.peaceful_only"
 - player faces same direction as horse after mounting
 - added setting to use mouse/look direction to control left/right turning (enabled by default)
+- horse can follow multiple items
